syntax = "proto3";

package micro.apps.proto.common.v1;

option java_multiple_files = true;
option java_package = "micro.apps.proto.common.v1";

import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

enum Currency {
    CURRENCY_USD_UNSPECIFIED = 0;
    CURRENCY_INR = 1;
}

enum Status {
    STATUS_OK_UNSPECIFIED = 0;
    STATUS_NEW = 2;
    STATUS_NOHIT = 3;
}

enum Profile {
    PROFILE_UNSPECIFIED = 0;
    PROFILE_RO = 1;
    PROFILE_RW_FULL_MATCH = 2;
    PROFILE_RW_PARTIAL_MATCH = 3;
}

message Person {
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string email = 5;
}

message Address {
    string suite = 1;
    string street = 2;
    string city = 3;
    string state = 4;
    string code = 5;
    string country = 6;
}

message Product {
    string id = 1;
    string slug = 2;
    string name = 3;
    string description = 4;
    Currency currency = 5;
    int32 price = 6;
}

message Order {
    string id = 1;
    google.protobuf.StringValue subject = 2 [
        (validate.rules).string = {
            min_len: 5
        }
    ];
    string body = 3;
    int32 total_price = 4;
    Currency currency = 5;
    string channel = 6;
}
